// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackParameters /> should render a parameter 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-sm-9 col-sm-offset-1"
    >
      <h2>
        Parameters list
      </h2>
      <br />
      <span>
        <button
          className="btn btn-sm btn-info"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Create parameter
        </button>
      </span>
      <br />
      <br />
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="parameter-list"
            >
              <table
                className="table undefined"
              >
                <thead>
                  <tr>
                    <th>
                      Title
                    </th>
                    <th>
                      Name
                    </th>
                    <th>
                      Description
                    </th>
                    <th>
                      Value Type
                    </th>
                    <th>
                      Default Value
                    </th>
                    <th>
                      Action
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      A parameter title
                    </td>
                    <td>
                      A parameter name
                    </td>
                    <td>
                      A parameter descriptions
                    </td>
                    <td>
                      string
                    </td>
                    <td>
                      test
                    </td>
                    <td>
                      <button
                        className="btn btn-sm btn-primary"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Delete
                      </button>
                      <span>
                        <button
                          className="btn btn-sm btn-info"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Edit
                        </button>
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-9 col-sm-offset-1"
    >
      <h2>
        Entity list
      </h2>
      <br />
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="entity-list"
            >
              <table
                className="table undefined"
              >
                <thead>
                  <tr>
                    <th>
                      Title
                    </th>
                    <th>
                      Type
                    </th>
                    <th>
                      Description
                    </th>
                    <th>
                      Applied Parameter
                    </th>
                    <th>
                      Action
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      A good input
                    </td>
                    <td />
                    <td>
                      Input
                    </td>
                    <td>
                      0
                    </td>
                    <td>
                      <button
                        className="btn btn-sm btn-primary"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Apply Parameter
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContentPackParameters /> should render with empty parameters 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-sm-9 col-sm-offset-1"
    >
      <h2>
        Parameters list
      </h2>
      <br />
      <span>
        <button
          className="btn btn-sm btn-info"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Create parameter
        </button>
      </span>
      <br />
      <br />
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="parameter-list"
            >
              <p>
                To use parameters for content packs, at first a parameter must be created and can then be applied to a entity.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-sm-9 col-sm-offset-1"
    >
      <h2>
        Entity list
      </h2>
      <br />
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="entity-list"
            >
              <p>
                No data available.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
